# project-nlp

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  infer2.py  preprocessing2.py  pyproject.toml  train.py  train2.py
.dvc/: config
conf/: config.yaml
data/: test_df.csv.dvc  train_df.csv.dvc
